[project]
name = "medium-article-generator-using-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.3.21",
    "arxiv>=2.3.1",
    "ddgs>=9.10.0",
    "fastapi[standard]>=0.128.0",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.3",
    "lxml-html-clean>=0.4.3",
    "newspaper4k>=0.9.4.1",
    "openai>=2.14.0",
    "praw>=7.8.1",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "tweepy>=4.16.0",
    "uvicorn>=0.40.0",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.3",
]
